packages/vaadin-lumo-styles/src/components/markdown.css
/**
 * @license
 * Copyright (c) 2000 - 2026 Vaadin Ltd.
 * This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
 */
:where(vaadin-markdown) {
  /* Use the margins defined by vaadin-markdown base styles */
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  hr {
    margin-block: revert-layer;
  }
}

